code size on mobile, minor fixes

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -174,6 +174,7 @@ body {
 }
 
 .glass-headline {
+	text-shadow: 2px 2px 0 rgba($primary-dark, 0.3);
 	font-size: 4.2rem;
 	line-height: 1.1;
 	margin-bottom: 0;
@@ -613,10 +614,13 @@ cite {
 code {
 	display: inline-block;
 	padding: 2px 4px;
+	@extend %border-radius;
 	font-family: $monospace;
 	background: $light-beige;
-	font-size: 0.8em;
-	@extend %border-radius;
+	font-size: 0.7em;
+	@media screen and (min-width: nth($breakpoints, 1)) {
+		font-size: 0.8em;
+	}
 }
 em {
 	font-style: italic;
